--- a/lgo/Go_By_Example.ipynb
+++ b/lgo/Go_By_Example.ipynb
@@ -6,9 +6,13 @@
    "source": [
     "## Go by Example\n",
     "\n",
-    "https://gobyexample.com/\n",
+    "[Go by Example](https://gobyexample.com/)\n",
     "\n",
-    "https://tour.golang.org/list"
+    "[Go Tour](https://tour.golang.org/list)\n",
+    "\n",
+    "[Essential Go Book](https://www.programming-books.io/essential/go/)\n",
+    "\n",
+    "[Exercism/Go](https://exercism.io/my/tracks/go)"
    ]
   },
   {
@@ -837,7 +841,9 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -4084,6 +4090,179 @@
     "    // You can format+print to `io.Writers` other than\n",
     "    // `os.Stdout` using `Fprintf`.\n",
     "    fmt.Fprintf(os.Stderr, \"an %s\\n\", \"error\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://blog.golang.org/strings\n",
+    "\n",
+    "Strings, bytes, runes and characters in Go"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample1 := \"中文很难\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample1 = \"Chinese 中文 is hard to learn\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import \"unicode/utf8\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "strings are collection of bytes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chinese 中文 is hard to learn\n",
+      "32\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(sample1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43 68 69 6e 65 73 65 20 e4 b8 ad e6 96 87 20 69 73 20 68 61 72 64 20 74 6f 20 6c 65 61 72 6e "
+     ]
+    }
+   ],
+   "source": [
+    "    for i := 0; i < len(sample1); i++ {\n",
+    "        fmt.Printf(\"%x \", sample1[i])\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "U+0043 'C' starts at byte position 0\n",
+      "U+0068 'h' starts at byte position 1\n",
+      "U+0069 'i' starts at byte position 2\n",
+      "U+006E 'n' starts at byte position 3\n",
+      "U+0065 'e' starts at byte position 4\n",
+      "U+0073 's' starts at byte position 5\n",
+      "U+0065 'e' starts at byte position 6\n",
+      "U+0020 ' ' starts at byte position 7\n",
+      "U+4E2D '中' starts at byte position 8\n",
+      "U+6587 '文' starts at byte position 11\n",
+      "U+0020 ' ' starts at byte position 14\n",
+      "U+0069 'i' starts at byte position 15\n",
+      "U+0073 's' starts at byte position 16\n",
+      "U+0020 ' ' starts at byte position 17\n",
+      "U+0068 'h' starts at byte position 18\n",
+      "U+0061 'a' starts at byte position 19\n",
+      "U+0072 'r' starts at byte position 20\n",
+      "U+0064 'd' starts at byte position 21\n",
+      "U+0020 ' ' starts at byte position 22\n",
+      "U+0074 't' starts at byte position 23\n",
+      "U+006F 'o' starts at byte position 24\n",
+      "U+0020 ' ' starts at byte position 25\n",
+      "U+006C 'l' starts at byte position 26\n",
+      "U+0065 'e' starts at byte position 27\n",
+      "U+0061 'a' starts at byte position 28\n",
+      "U+0072 'r' starts at byte position 29\n",
+      "U+006E 'n' starts at byte position 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index, runeValue := range sample1 {\n",
+    "    fmt.Printf(\"%#U starts at byte position %d\\n\", runeValue, index)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "U+0043 'C' starts at byte position 0\n",
+      "U+0068 'h' starts at byte position 1\n",
+      "U+0069 'i' starts at byte position 2\n",
+      "U+006E 'n' starts at byte position 3\n",
+      "U+0065 'e' starts at byte position 4\n",
+      "U+0073 's' starts at byte position 5\n",
+      "U+0065 'e' starts at byte position 6\n",
+      "U+0020 ' ' starts at byte position 7\n",
+      "U+4E2D '中' starts at byte position 8\n",
+      "U+6587 '文' starts at byte position 11\n",
+      "U+0020 ' ' starts at byte position 14\n",
+      "U+0069 'i' starts at byte position 15\n",
+      "U+0073 's' starts at byte position 16\n",
+      "U+0020 ' ' starts at byte position 17\n",
+      "U+0068 'h' starts at byte position 18\n",
+      "U+0061 'a' starts at byte position 19\n",
+      "U+0072 'r' starts at byte position 20\n",
+      "U+0064 'd' starts at byte position 21\n",
+      "U+0020 ' ' starts at byte position 22\n",
+      "U+0074 't' starts at byte position 23\n",
+      "U+006F 'o' starts at byte position 24\n",
+      "U+0020 ' ' starts at byte position 25\n",
+      "U+006C 'l' starts at byte position 26\n",
+      "U+0065 'e' starts at byte position 27\n",
+      "U+0061 'a' starts at byte position 28\n",
+      "U+0072 'r' starts at byte position 29\n",
+      "U+006E 'n' starts at byte position 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, w := 0, 0; i < len(sample1); i += w {\n",
+    "    runeValue, width := utf8.DecodeRuneInString(sample1[i:])\n",
+    "    fmt.Printf(\"%#U starts at byte position %d\\n\", runeValue, i)\n",
+    "    w = width\n",
+    "}"
    ]
   },
   {
