--- a/lgo/Go_By_Example.ipynb
+++ b/lgo/Go_By_Example.ipynb
@@ -10,9 +10,9 @@
     "\n",
     "[Go Tour](https://tour.golang.org/list)\n",
     "\n",
-    "[Essential Go Book](https://www.programming-books.io/essential/go/)\n",
+    "[Go-Essential Book](https://www.programming-books.io/essential/go/)\n",
     "\n",
-    "[Exercism/Go](https://exercism.io/my/tracks/go)"
+    "[Go-Exercism](https://exercism.io/my/tracks/go)"
    ]
   },
   {
