--- a/lgo/Go_By_Example.ipynb
+++ b/lgo/Go_By_Example.ipynb
@@ -10,9 +10,15 @@
     "\n",
     "[Go Tour](https://tour.golang.org/list)\n",
     "\n",
+    "[Effective Go](https://golang.org/doc/effective_go.html)\n",
+    "\n",
     "[Go-Essential Book](https://www.programming-books.io/essential/go/)\n",
     "\n",
-    "[Go-Exercism](https://exercism.io/my/tracks/go)"
+    "[Go-Exercism](https://exercism.io/my/tracks/go)\n",
+    "\n",
+    "[free-programming-books](https://github.com/EbookFoundation/free-programming-books/blob/master/free-programming-books.md#go)\n",
+    "\n",
+    "[web-dev-golang-anti-textbook](https://github.com/thewhitetulip/web-dev-golang-anti-textbook)"
    ]
   },
   {
@@ -5652,6 +5658,7 @@
     "\n",
     "//package main\n",
     "\n",
+    "import \"fmt\"\n",
     "import \"syscall\"\n",
     "import \"os\"\n",
     "import \"os/exec\"\n",
@@ -5663,6 +5670,7 @@
     "    // we'll use `exec.LookPath` to find it (probably\n",
     "    // `/bin/ls`).\n",
     "    binary, lookErr := exec.LookPath(\"ls\")\n",
+    "    fmt.Println(\"binary=\",binary)\n",
     "    if lookErr != nil {\n",
     "        panic(lookErr)\n",
     "    }\n",
@@ -5677,6 +5685,7 @@
     "    // to use. Here we just provide our current\n",
     "    // environment.\n",
     "    env := os.Environ()\n",
+    "    fmt.Println(\"binary=\",env)\n",
     "\n",
     "    // Here's the actual `syscall.Exec` call. If this call is\n",
     "    // successful, the execution of our process will end\n",
@@ -5712,7 +5721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5725,7 +5734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
