--- a/lgo/exercism-go.ipynb
+++ b/lgo/exercism-go.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[Go Exercism](https://exercism.io/my/tracks/go)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### two-fer"
    ]
   },
@@ -950,6 +957,57 @@
    ],
    "source": [
     "defineMap()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import \"unicode\"\n",
+    "import \"fmt\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "func IsIsogram(word string) bool {\n",
+    "    var mDup = map[rune]int{}\n",
+    "    for _, c := range word {\n",
+    "        c = unicode.ToUpper(c)\n",
+    "        if c == ' ' || c == '-' {\n",
+    "            continue\n",
+    "        }\n",
+    "        mDup[c]++\n",
+    "        if mDup[c] > 1 {\n",
+    "            return false\n",
+    "        }\n",
+    "    }\n",
+    "    return true\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n",
+      "5\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(IsIsogram(\"An bel\"))"
    ]
   },
   {
