--- a/lgo/Go_By_Example.ipynb
+++ b/lgo/Go_By_Example.ipynb
@@ -10,6 +10,8 @@
     "\n",
     "[Go Tour](https://tour.golang.org/list)\n",
     "\n",
+    "[LEARNING GO](https://www.miek.nl/go/)\n",
+    "\n",
     "[Effective Go](https://golang.org/doc/effective_go.html)\n",
     "\n",
     "[Go-Essential Book](https://www.programming-books.io/essential/go/)\n",
