--- a/lgo/exercism-go.ipynb
+++ b/lgo/exercism-go.ipynb
@@ -1012,10 +1012,204 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import \"regexp\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import \"fmt\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import \"strings\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import \"strconv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r, _ := regexp.Compile(\"[\\\\D]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s := \"4539 1488 0343 6467\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = r.ReplaceAllString(s, \"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4539148803436467\n",
+      "17\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var n, sm int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "4\n",
+      "3\n",
+      "3\n",
+      "8\n",
+      "4\n",
+      "9\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i:=len(s)-1; i > -1; i -= 2 {\n",
+    "    fmt.Println(int(s[i] - '0'))\n",
+    "    n := int(s[i] - '0')\n",
+    "    sm += n\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43\n",
+      "3\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(sm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "6\n",
+      "4\n",
+      "0\n",
+      "8\n",
+      "1\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i:=len(s)-2; i > -1; i -= 2 {\n",
+    "    fmt.Println(int(s[i] - '0'))\n",
+    "    n := 2*int(s[i] - '0')\n",
+    "    if n > 9 {\n",
+    "        n -= 9\n",
+    "    }\n",
+    "    sm += n\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n",
+      "3\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(sm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if sm%10 == 0 {\n",
+    "    return true\n",
+    "} else {\n",
+    "    return false\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
