--- a/lgo/Untitled.ipynb
+++ b/lgo/Untitled.ipynb
@@ -6,65 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import (\n",
-    "    \"regexp\"\n",
-    "    \"fmt\"\n",
-    ")"
+    "logedIn := true"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "func Valid(cardNum string) bool {\n",
-    "\tif len(cardNum) < 2 {\n",
-    "\t\treturn false\n",
-    "\t}\n",
-    "    \n",
-    "    // cleanup card_num\n",
-    "    r, _ := regexp.Compile(\"[ ]\")\n",
-    "    cardNum = r.ReplaceAllString(cardNum, \"\")\n",
-    "\n",
-    "    r, _ = regexp.Compile(\"^[0-9]+$\")\n",
-    "    if r.MatchString(cardNum) == false {\n",
-    "        return false\n",
-    "    }\n",
-    "    \n",
-    "    var n, sm int\n",
-    "\n",
-    "    for i:=len(cardNum)-1; i > -1; i -= 2 {\n",
-    "        fmt.Println(int(cardNum[i] - '0'))\n",
-    "        n = int(cardNum[i] - '0')\n",
-    "        sm += n        \n",
-    "        fmt.Println(\"\\t\", n)\n",
-    "    }\n",
-    "\n",
-    "    fmt.Println(\"****\")\n",
-    "    for i:=len(cardNum)-2; i > -1; i -= 2 {\n",
-    "        fmt.Println(int(cardNum[i] - '0'))\n",
-    "        n = 2*int(cardNum[i] - '0')\n",
-    "        if n > 9 {\n",
-    "            n -= 9\n",
-    "        }\n",
-    "        sm += n\n",
-    "        fmt.Println(\"\\t\", n)\n",
-    "    }   \n",
-    "\n",
-    "    fmt.Println(sm)\n",
-    "    \n",
-    "    if sm%10 == 0 {\n",
-    "        return true\n",
-    "    } else {\n",
-    "        return false\n",
-    "    }    \n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -76,63 +23,38 @@
     }
    ],
    "source": [
-    "Valid(\"055a 444 285\")"
+    "!logedIn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a := 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4539148803436467\n",
-      "7\n",
-      "\t 7\n",
-      "4\n",
-      "\t 4\n",
-      "3\n",
-      "\t 3\n",
-      "3\n",
-      "\t 3\n",
-      "8\n",
-      "\t 8\n",
-      "4\n",
-      "\t 4\n",
-      "9\n",
-      "\t 9\n",
-      "5\n",
-      "\t 5\n",
-      "6\n",
-      "\t 3\n",
-      "6\n",
-      "\t 3\n",
-      "4\n",
-      "\t 8\n",
-      "0\n",
-      "\t 0\n",
-      "8\n",
-      "\t 7\n",
-      "1\n",
-      "\t 2\n",
-      "3\n",
-      "\t 6\n",
-      "4\n",
-      "\t 8\n",
-      "80\n",
       "true\n"
      ]
     }
    ],
    "source": [
-    "Valid(\"4539 1488 0343 6467\")"
+    "a == 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +66,35 @@
     }
    ],
    "source": [
-    "Valid(\"8273 1232 7352 0569\")"
+    "!(a == 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import \"fmt\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "6\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(\"Hello\")"
    ]
   },
   {
@@ -152,9 +102,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "//exercism download --exercise=luhn --track=go"
-   ]
+   "source": []
   }
  ],
  "metadata": {
