--- a/lgo/Valid.ipynb
+++ b/lgo/Valid.ipynb
@@ -134,18 +134,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "func Valid(cardNum string) bool {\n",
+    "\tif len(cardNum) < 2 {\n",
+    "\t\treturn false\n",
+    "\t}\n",
+    "\tvar sm, pos int\n",
+    "\tfor i := len(cardNum) - 1; i > -1; i-- {\n",
+    "        fmt.Println(\"digit= \",string(cardNum[i]))\n",
+    "\t\tif unicode.IsSpace(rune(cardNum[i])) {\n",
+    "\t\t\tcontinue\n",
+    "\t\t}\n",
+    "\t\tif !unicode.IsDigit(rune(cardNum[i])) {\n",
+    "\t\t\treturn false\n",
+    "\t\t}\n",
+    "\t\tpos++                      // track digit position from right\n",
+    "\t\tn := int(cardNum[i] - '0') // int value of a digit\n",
+    "\t\tif pos%2 == 0 {\n",
+    "\t\t\tn *= 2\n",
+    "\t\t\tif n > 9 {\n",
+    "\t\t\t\tn -= 9\n",
+    "\t\t\t}\n",
+    "\t\t}\n",
+    "\t\tsm += n // running sum of digits\n",
+    "        fmt.Println(\" pos=\", pos, \" n=\", n, \" sm=\", sm)\n",
+    "\t}\n",
+    "\tif sm%10 > 0 || (sm == 0 && pos == 1) {\n",
+    "\t\treturn false\n",
+    "\t}\n",
+    "\treturn true\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "true\n",
-      " n= 0\n",
-      " pos= 1  n= 0  sm= 0\n",
-      " \n",
+      "digit=  5\n",
+      " pos= 1  n= 5  sm= 5\n",
+      "digit=  8\n",
+      " pos= 2  n= 7  sm= 12\n",
+      "digit=  2\n",
+      " pos= 3  n= 2  sm= 14\n",
+      "digit=   \n",
+      "digit=  4\n",
+      " pos= 4  n= 8  sm= 22\n",
+      "digit=  4\n",
+      " pos= 5  n= 4  sm= 26\n",
+      "digit=  4\n",
+      " pos= 6  n= 8  sm= 34\n",
+      "digit=   \n",
+      "digit=  5\n",
+      " pos= 7  n= 5  sm= 39\n",
+      "digit=  5\n",
+      " pos= 8  n= 1  sm= 40\n",
+      "digit=  0\n",
+      " pos= 9  n= 0  sm= 40\n",
+      "true\n"
+     ]
+    }
+   ],
+   "source": [
+    "Valid(\"055 444 285\")  //true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "false\n"
      ]
     }
@@ -412,6 +481,265 @@
    "source": [
     "//exercism download --exercise=luhn --track=go"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import \"errors\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Square calculates number of grains per chess board\n",
+    "func Square(seq int) (uint64, error) {\n",
+    "\tif seq < 1 || seq > 64 {\n",
+    "\t\treturn 0, errors.New(\"Invalid input\")\n",
+    "\t}\n",
+    "\tif seq == 1 {\n",
+    "\t\treturn 1, nil\n",
+    "\t}\n",
+    "\treturn 2 << (uint(seq) - 2), nil\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Total adds up all grains\n",
+    "func Total() uint64 {\n",
+    "\tt, err := Square(64)\n",
+    "\tif err == nil {\n",
+    "\t\treturn t - 1\n",
+    "\t}\n",
+    "\treturn 0\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9223372036854775807\n",
+      "20\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(Total())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 true\n",
+      "7\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(Square(-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 true\n",
+      "7\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(Square(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 true\n",
+      "7\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(Square(65))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 false\n",
+      "8\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(Square(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 false\n",
+      "8\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(Square(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 false\n",
+      "8\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(Square(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32768 false\n",
+      "12\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(Square(16))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2147483648 false\n",
+      "17\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(Square(32))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4611686018427387904 false\n",
+      "26\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(Square(63))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9223372036854775808 false\n",
+      "26\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(Square(64))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
