move exercism to subfolder

--- a/lgo/Go_By_Example.ipynb
+++ b/lgo/Go_By_Example.ipynb
@@ -8,6 +8,8 @@
     "\n",
     "[Go by Example](https://gobyexample.com/)\n",
     "\n",
+    "[Learn Go with tests](https://github.com/wgong/learn-go-with-tests)\n",
+    "\n",
     "[Go Tour](https://tour.golang.org/list)\n",
     "\n",
     "[LEARNING GO](https://www.miek.nl/go/)\n",
@@ -17,6 +19,8 @@
     "[Go-Essential Book](https://www.programming-books.io/essential/go/)\n",
     "\n",
     "[Go-Exercism](https://exercism.io/my/tracks/go)\n",
+    "\n",
+    "[Gophercises](https://gophercises.com)\n",
     "\n",
     "[free-programming-books](https://github.com/EbookFoundation/free-programming-books/blob/master/free-programming-books.md#go)\n",
     "\n",
@@ -423,22 +427,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Write 2 as two\n",
-      "It's a weekday\n",
-      "It's after noon\n",
-      "I'm a bool\n",
-      "I'm an int\n",
-      "Don't know type string\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "// Here's a basic `switch`.\n",
     "i := 2\n",
@@ -471,8 +462,34 @@
     "    fmt.Println(\"It's before noon\")\n",
     "default:\n",
     "    fmt.Println(\"It's after noon\")\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import \"fmt\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm a bool\n",
+      "I'm an int\n",
+      "Don't know type string\n"
+     ]
+    }
+   ],
+   "source": [
     "// A type `switch` compares types instead of values.  You\n",
     "// can use this to discover the type of an interface\n",
     "// value.  In this example, the variable `t` will have the\n",
@@ -1910,12 +1927,15 @@
    "source": [
     "https://gobyexample.com/interfaces\n",
     "\n",
-    "http://jordanorelli.com/post/32665860244/how-to-use-interfaces-in-go"
+    "\n",
+    "An interface defines a set of methods on a struct.\n",
+    "\n",
+    "Zero value of interface is nil."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1930,13 +1950,17 @@
     "    perim() float64\n",
     "}\n",
     "\n",
-    "// For our example we'll implement this interface on\n",
-    "// `rect` and `circle` types.\n",
+    "// For our example we'll implement this interface on 2 types:\n",
+    "// `rect` and `circle` \n",
     "type rect struct {\n",
     "    width, height float64\n",
     "}\n",
     "type circle struct {\n",
     "    radius float64\n",
+    "}\n",
+    "\n",
+    "type triangle struct {\n",
+    "    a,b,c float64\n",
     "}\n",
     "\n",
     "// To implement an interface in Go, we just need to\n",
@@ -1957,6 +1981,17 @@
     "    return 2 * math.Pi * c.radius\n",
     "}\n",
     "\n",
+    "// implementation fo triangle\n",
+    "func (t triangle) perim() float64 {\n",
+    "    return t.a + t.b + t.c\n",
+    "}\n",
+    "\n",
+    "func (t triangle) area() float64 {\n",
+    "    // Heron's formula\n",
+    "    semi := 0.5*(t.a + t.b + t.c)\n",
+    "    return math.Sqrt(semi*(semi-t.a)*(semi-t.b)*(semi-t.c))\n",
+    "}\n",
+    "\n",
     "// If a variable has an interface type, then we can call\n",
     "// methods that are in the named interface. Here's a\n",
     "// generic `measure` function taking advantage of this\n",
@@ -1966,12 +2001,13 @@
     "    fmt.Println(\"geometry param: \", g)\n",
     "    fmt.Println(\"area: \", g.area())\n",
     "    fmt.Println(\"perimeter: \", g.perim())\n",
+    "    fmt.Println(\"===============\")\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1982,27 +2018,133 @@
       "geometry param:  {3 4}\n",
       "area:  12\n",
       "perimeter:  14\n",
-      "************\n",
+      "===============\n",
       "geometry type: lgo_exec.LgoExport_circle\n",
       "geometry param:  {5}\n",
       "area:  78.53981633974483\n",
-      "perimeter:  31.41592653589793\n"
+      "perimeter:  31.41592653589793\n",
+      "===============\n",
+      "geometry type: lgo_exec.LgoExport_triangle\n",
+      "geometry param:  {5 12 13}\n",
+      "area:  30\n",
+      "perimeter:  30\n",
+      "===============\n"
      ]
     }
    ],
    "source": [
-    "    r := rect{width: 3, height: 4}\n",
+    "// The `circle` and `rect` struct types both\n",
+    "// implement the `geometry` interface so we can use\n",
+    "// instances of\n",
+    "// these structs as arguments to `measure`.\n",
     "\n",
-    "    // The `circle` and `rect` struct types both\n",
-    "    // implement the `geometry` interface so we can use\n",
-    "    // instances of\n",
-    "    // these structs as arguments to `measure`.\n",
-    "    measure(r)\n",
+    "// r is rect\n",
+    "r := rect{width: 3, height: 4}\n",
+    "measure(r)\n",
     "\n",
-    "    fmt.Println(\"************\")\n",
     "\n",
-    "    c := circle{radius: 5}\n",
-    "    measure(c)"
+    "// c a circle\n",
+    "c := circle{radius: 5}\n",
+    "measure(c)\n",
+    "\n",
+    "// a triangle\n",
+    "t := triangle{a: 5, b: 12, c: 13}\n",
+    "measure(t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[How to use interfaces in Go](http://jordanorelli.com/post/32665860244/how-to-use-interfaces-in-go)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// behavior of abstract class\n",
+    "type Animal interface {\n",
+    "    Speak() string\n",
+    "}\n",
+    "\n",
+    "// implemented by each object sharing the same behavior\n",
+    "type Dog struct {\n",
+    "}\n",
+    "\n",
+    "func (d Dog) Speak() string {\n",
+    "    return \"Woof!\"\n",
+    "}\n",
+    "\n",
+    "type Cat struct {\n",
+    "}\n",
+    "\n",
+    "func (c Cat) Speak() string {\n",
+    "    return \"Meow!\"\n",
+    "}\n",
+    "\n",
+    "type JavaProgrammer struct {\n",
+    "}\n",
+    "\n",
+    "func (j JavaProgrammer) Speak() string {\n",
+    "    return \"Design patterns!\"\n",
+    "}\n",
+    "\n",
+    "func main() {\n",
+    "    animals := []Animal{Dog{}, Cat{}, JavaProgrammer{}}\n",
+    "    for _, animal := range animals {\n",
+    "        fmt.Printf(\"%T \\t speaks %s\\n\", animal, animal.Speak())\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lgo_exec.Dog \t speaks Woof!\n",
+      "lgo_exec.Cat \t speaks Meow!\n",
+      "lgo_exec.JavaProgrammer \t speaks Design patterns!\n"
+     ]
+    }
+   ],
+   "source": [
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import \"math\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4142135623730951\n",
+      "19\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(math.Sqrt(2))"
    ]
   },
   {
