--- a/exercism/lgo/Go_By_Example.ipynb
+++ b/exercism/lgo/Go_By_Example.ipynb
@@ -1636,7 +1636,16 @@
     "https://gobyexample.com/structs\n",
     "\n",
     "\n",
-    "https://github.com/wgong/learn-go-with-tests/blob/master/structs-methods-and-interfaces.md"
+    "https://github.com/wgong/learn-go-with-tests/blob/master/structs-methods-and-interfaces.md\n",
+    "\n",
+    "struct is like object without method\n",
+    "\n",
+    "`\n",
+    "type person struct {\n",
+    "    name string\n",
+    "    age  int\n",
+    "}\n",
+    "`"
    ]
   },
   {
@@ -1709,7 +1718,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://gobyexample.com/methods"
+    "https://gobyexample.com/methods\n",
+    "\n",
+    "A method is a function with a receiver. A method declaration binds an identifier, the method name, to a method, and associates the method with the receiver's base type.\n",
+    "\n",
+    "\n",
+    "`\n",
+    "func (r Rectangle) Area() float64  {\n",
+    "    return r.Width * r.Height\n",
+    "}\n",
+    "`"
    ]
   },
   {
@@ -1935,7 +1953,26 @@
     "\n",
     "An interface defines a set of methods on a struct.\n",
     "\n",
-    "Zero value of interface is nil."
+    "\n",
+    "Interfaces are a very powerful concept in statically typed languages like Go because they allow you to make functions that can be used with different types and create highly-decoupled code whilst still maintaining type-safety.\n",
+    "\n",
+    "\n",
+    "Zero value of interface is nil.\n",
+    "\n",
+    "`\n",
+    "type Shape interface {\n",
+    "    Area() float64\n",
+    "}\n",
+    "`\n",
+    "\n",
+    "One can think of \n",
+    "`\n",
+    "type interface{} \n",
+    "`\n",
+    "as just \n",
+    "`\n",
+    "any type\n",
+    "`"
    ]
   },
   {
