--- a/exercism/lgo/exercism-py.ipynb
+++ b/exercism/lgo/exercism-py.ipynb
@@ -150,6 +150,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env.ipynb\t   exercism-py.ipynb  Go_By_Example.ipynb  sum.ipynb\r\n",
+      "exercism-go.ipynb  factoring.ipynb    Grains.ipynb\t   Valid.ipynb\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob\n",
+    "import shutil\n",
+    "\n",
+    "rep_str = \"md at master · wgong_learn-go-with-tests.\"\n",
+    "\n",
+    "for filename in glob.glob(\"*\"):\n",
+    "    if filename.find(rep_str) > 0:\n",
+    "        file_new = filename.replace(rep_str,'')\n",
+    "        shutil.move(filename, file_new)\n",
+    "        print(\"mv %s %s\" % (filename, file_new))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
