--- a/exercism/lgo/Go_By_Example.ipynb
+++ b/exercism/lgo/Go_By_Example.ipynb
@@ -4579,7 +4579,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://gobyexample.com/json"
+    "https://gobyexample.com/json\n",
+    "\n",
+    "\n",
+    "[JSON and Go](https://blog.golang.org/json-and-go)"
    ]
   },
   {
