--- a/exercism/lgo/exercism-go.ipynb
+++ b/exercism/lgo/exercism-go.ipynb
@@ -1210,6 +1210,122 @@
     "    return false\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import \"fmt\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var s string\n",
+    "s  = fmt.Sprintf(\"%d:%d\", 10,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10:10\n"
+     ]
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1440\n"
+     ]
+    }
+   ],
+   "source": [
+    "60*24"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type Clock struct {\n",
+    "\th, m int\n",
+    "}\n",
+    "\n",
+    "// String returns string representation of clock\n",
+    "func (c *Clock) String() string {\n",
+    "\tmins := (c.h*60 + c.m) % 1440\n",
+    "\tif mins < 0 {\n",
+    "\t\tmins += 1440\n",
+    "\t}\n",
+    "\treturn fmt.Sprintf(\"%02d:%02d\", int(mins/60), mins%60)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22:10\n"
+     ]
+    }
+   ],
+   "source": [
+    "c := Clock{-121,-5810}\n",
+    "\n",
+    "c.String()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1:1: invalid operation: String is not in method set of github.com/yunabe/lgo/sess7b2274696d65223a313534363436323231393235343232303637387d/exec16.Clock\n"
+     ]
+    }
+   ],
+   "source": [
+    "(Clock{0,160}).String()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
