parallel-letter-freq

--- a/exercism/lgo/Go_By_Example.ipynb
+++ b/exercism/lgo/Go_By_Example.ipynb
@@ -2309,6 +2309,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "https://tour.golang.org/concurrency/\n",
+    "\n",
+    "\n",
+    "* [Tour of Go - Concurrency](https://tour.golang.org/concurrency/1)\n",
+    "\n",
+    "* [Go Blog - Concurrency is not parallelism](https://blog.golang.org/concurrency-is-not-parallelism)\n",
+    "\n",
+    "* [Intro-to-Programming-in-Go : Concurrency](https://www.golang-book.com/books/intro/10)\n",
+    "\n",
+    "* [Medium Blog - Go's sync.Map](https://medium.com/@deckarep/the-new-kid-in-town-gos-sync-map-de24a6bf7c2c)\n",
+    "\n",
+    "* [O'Reilly Media - Concurrency in Go](http://shop.oreilly.com/product/0636920046189.do)\n",
+    "\n",
+    "* [Next Step](https://tour.golang.org/concurrency/11)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "https://gobyexample.com/goroutines\n",
     "\n"
    ]
