--- a/exercism/lgo/exercism-go.ipynb
+++ b/exercism/lgo/exercism-go.ipynb
@@ -1232,92 +1232,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10:10\n"
-     ]
-    }
-   ],
-   "source": [
-    "s"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1440\n"
-     ]
-    }
-   ],
-   "source": [
-    "60*24"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "type Clock struct {\n",
-    "\th, m int\n",
-    "}\n",
+    "//package parallel\n",
+    "import (\n",
+    "    \"fmt\"\n",
+    "    \"unicode\"\n",
+    ")\n",
     "\n",
-    "// String returns string representation of clock\n",
-    "func (c *Clock) String() string {\n",
-    "\tmins := (c.h*60 + c.m) % 1440\n",
-    "\tif mins < 0 {\n",
-    "\t\tmins += 1440\n",
+    "func parallelLetter(sentence string, nsplit int) map[rune]int {\n",
+    "\n",
+    "\tresChan := make(chan map[rune]int)\n",
+    "    \n",
+    "    for n, chunk := range splitN(sentence, nsplit) {\n",
+    "        fmt.Println(n,\",\",chunk)\n",
+    "\t\tgo func(s string) {\n",
+    "            fmt.Println(\"s=\", s)\n",
+    "\t\t\tm := make(map[rune]int)\n",
+    "\t\t\tfor _, c := range s {\n",
+    "\t\t\t\tif unicode.IsLetter(c) {\n",
+    "\t\t\t\t\tm[unicode.ToUpper(c)]++\n",
+    "\t\t\t\t}\n",
+    "\t\t\t}\n",
+    "\t\t\tresChan <- m\n",
+    "\t\t}(chunk)\n",
     "\t}\n",
-    "\treturn fmt.Sprintf(\"%02d:%02d\", int(mins/60), mins%60)\n",
+    "\n",
+    "    mResult := make(map[rune]int)\n",
+    "\tfor i := 0; i < nsplit; i++ {\n",
+    "        m := <-resChan\n",
+    "        fmt.Println(m)\n",
+    "        for k, v := range m {\n",
+    "            fmt.Println(k,v)\n",
+    "            mResult[k] += v\n",
+    "        }\n",
+    "        fmt.Println(mResult)\n",
+    "\t}\n",
+    "\treturn mResult\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22:10\n"
+      "0 , abc  \n",
+      "1 , efg\n",
+      "s= efg\n",
+      "map[69:1 70:1 71:1]\n",
+      "69 1\n",
+      "70 1\n",
+      "71 1\n",
+      "map[69:1 70:1 71:1]\n",
+      "s= efg\n",
+      "map[70:1 71:1 69:1]\n",
+      "71 1\n",
+      "69 1\n",
+      "70 1\n",
+      "map[69:2 70:2 71:2]\n",
+      "map[71:2 69:2 70:2]\n"
      ]
     }
    ],
    "source": [
-    "c := Clock{-121,-5810}\n",
+    "parallelLetter(\"abc  efg\", 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "this is wrong\n",
     "\n",
-    "c.String()"
+    "\"go run\" gives correct answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1:1: invalid operation: String is not in method set of github.com/yunabe/lgo/sess7b2274696d65223a313534363436323231393235343232303637387d/exec16.Clock\n"
+      "abc  efg\n",
+      "map[69:1 70:1 71:1 65:1 66:1 67:1]\n",
+      "66 1\n",
+      "67 1\n",
+      "69 1\n",
+      "70 1\n",
+      "71 1\n",
+      "65 1\n",
+      "map[65:1 66:1 67:1 69:1 70:1 71:1]\n",
+      "map[69:1 70:1 71:1 65:1 66:1 67:1]\n",
+      "35\n",
+      "<nil>\n"
      ]
     }
    ],
    "source": [
-    "(Clock{0,160}).String()"
+    "fmt.Println(parallelLetter(\"abc  efg\", 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//package parallel\n",
+    "import (\n",
+    "    \"fmt\"\n",
+    "    \"unicode\"\n",
+    ")\n",
+    "\n",
+    "func parallelLetter1(sentence string) map[rune]int {\n",
+    "\n",
+    "\tresChan := make(chan map[rune]int)\n",
+    "\n",
+    "    go func(s string) {\n",
+    "        m := make(map[rune]int)\n",
+    "        for _, c := range s {\n",
+    "            if unicode.IsLetter(c) {\n",
+    "                m[unicode.ToUpper(c)]++\n",
+    "            }\n",
+    "        }\n",
+    "        resChan <- m\n",
+    "    }(sentence)\n",
+    "\n",
+    "\n",
+    "\tmResult := <-resChan\n",
+    "\treturn mResult\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "map[65:3 66:2 67:1 68:1]\n",
+      "25\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(parallelLetter1(\"abcd   ba  a\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "func splitN(s string, N int) []string {\n",
+    "    chunkSize := int(len(s)/N) + 1\n",
+    "    var s2 []string\n",
+    "    for i := 0; i < N-1; i++ {\n",
+    "        s2 = append(s2, s[i*chunkSize:(i+1)*chunkSize])\n",
+    "    }\n",
+    "    s2 = append(s2, s[(N-1)*chunkSize:])\n",
+    "    return s2\n",
+    "        \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[s2, s[i*chun kSize:(i+1)* chunkSize])]\n",
+      "40\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(splitN(\"s2, s[i*chunkSize:(i+1)*chunkSize])\", 3))"
    ]
   },
   {
