--- a/exercism/lgo/Go_By_Example.ipynb
+++ b/exercism/lgo/Go_By_Example.ipynb
@@ -6,25 +6,27 @@
    "source": [
     "## Go by Example\n",
     "\n",
-    "[Go by Example](https://gobyexample.com/)\n",
+    "*  [Go by Example](https://gobyexample.com/)\n",
     "\n",
-    "[Learn Go with tests](https://github.com/wgong/learn-go-with-tests)\n",
+    "*  [Learn Go with tests](https://github.com/wgong/learn-go-with-tests)\n",
     "\n",
-    "[Go Tour](https://tour.golang.org/list)\n",
+    "*  [Go Tour](https://tour.golang.org/list)\n",
     "\n",
-    "[LEARNING GO](https://www.miek.nl/go/)\n",
+    "*  [LEARNING GO](https://www.miek.nl/go/)\n",
     "\n",
-    "[Effective Go](https://golang.org/doc/effective_go.html)\n",
+    "*  [Effective Go](https://golang.org/doc/effective_go.html)\n",
     "\n",
-    "[Go-Essential Book](https://www.programming-books.io/essential/go/)\n",
+    "*  [Go-Essential Book](https://www.programming-books.io/essential/go/)\n",
     "\n",
-    "[Go-Exercism](https://exercism.io/my/tracks/go)\n",
+    "*  [Go-Exercism](https://exercism.io/my/tracks/go)\n",
     "\n",
-    "[Gophercises](https://gophercises.com)\n",
+    "*  [Gophercises](https://gophercises.com)\n",
     "\n",
-    "[free-programming-books](https://github.com/EbookFoundation/free-programming-books/blob/master/free-programming-books.md#go)\n",
+    "*  [free-programming-books](https://github.com/EbookFoundation/free-programming-books/blob/master/free-programming-books.md#go)\n",
     "\n",
-    "[web-dev-golang-anti-textbook](https://github.com/thewhitetulip/web-dev-golang-anti-textbook)"
+    "*  [web-dev-golang-anti-textbook](https://github.com/thewhitetulip/web-dev-golang-anti-textbook)\n",
+    "\n",
+    "*  [Next Step](https://tour.golang.org/concurrency/11)"
    ]
   },
   {
@@ -2321,8 +2323,7 @@
     "* [Medium Blog - Go's sync.Map](https://medium.com/@deckarep/the-new-kid-in-town-gos-sync-map-de24a6bf7c2c)\n",
     "\n",
     "* [O'Reilly Media - Concurrency in Go](http://shop.oreilly.com/product/0636920046189.do)\n",
-    "\n",
-    "* [Next Step](https://tour.golang.org/concurrency/11)"
+    "\n"
    ]
   },
   {
@@ -4018,6 +4019,85 @@
     "// for more information.\n",
     "\n",
     "main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "func splitToSlice(s string, N int) []string {\n",
+    "    if N < 2 {\n",
+    "        return []string{s}\n",
+    "    }\n",
+    "\tchunkSize := int(len(s)/N) + 1\n",
+    "\tvar s2 []string\n",
+    "\tfor i := 0; i < N-1; i++ {\n",
+    "\t\ts2 = append(s2, s[i*chunkSize:(i+1)*chunkSize])\n",
+    "\t}\n",
+    "\ts2 = append(s2, s[(N-1)*chunkSize:])\n",
+    "\treturn s2\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 \n",
+      "    p(\"Contains:  \", s.Contains(\"test\", \"es\"))\n",
+      "    p(\"Count:     \", s.Count(\"test\", \"t\"))\n",
+      "    p(\"HasPrefix: \", \n",
+      "115\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import \"fmt\"\n",
+    "s := `\n",
+    "    p(\"Contains:  \", s.Contains(\"test\", \"es\"))\n",
+    "    p(\"Count:     \", s.Count(\"test\", \"t\"))\n",
+    "    p(\"HasPrefix: \", s.HasPrefix(\"test\", \"te\"))\n",
+    "    p(\"HasSuffix: \", s.HasSuffix(\"test\", \"st\"))\n",
+    "    p(\"Index:     \", s.Index(\"test\", \"e\"))\n",
+    "    p(\"Join:      \", s.Join([]string{\"a\", \"b\"}, \"-\"))\n",
+    "    p(\"Repeat:    \", s.Repeat(\"a\", 5))\n",
+    "    p(\"Replace:   \", s.Replace(\"foo\", \"o\", \"0\", -1))\n",
+    "    p(\"Replace:   \", s.Replace(\"foo\", \"o\", \"0\", 1))\n",
+    "    p(\"Split:     \", s.Split(\"a-b-c-d-e\", \"-\"))\n",
+    "    p(\"ToLower:   \", s.ToLower(\"TEST\"))\n",
+    "    p(\"ToUpper:   \", s.ToUpper(\"test\"))\n",
+    "`\n",
+    "pieces := splitToSlice(s,5)\n",
+    "fmt.Println(len(pieces), pieces[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[abc]\n",
+      "6\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "w := \"abc\"\n",
+    "slice := []string{w}\n",
+    "fmt.Println(slice)"
    ]
   },
   {
