--- a/exercism/lgo/exercism-go.ipynb
+++ b/exercism/lgo/exercism-go.ipynb
@@ -1431,6 +1431,181 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//package tree\n",
+    "\n",
+    "import (\n",
+    "\t\"errors\"\n",
+    "\t\"fmt\"\n",
+    ")\n",
+    "\n",
+    "// Record for input record\n",
+    "type Record struct {\n",
+    "\tID, Parent int\n",
+    "}\n",
+    "\n",
+    "// Node for tree node\n",
+    "type Node struct {\n",
+    "\tID       int\n",
+    "\tChildren []*Node\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Build builds tree from input Records\n",
+    "func Build(records []Record) (*Node, error) {\n",
+    "\tmapIDNode := make(map[int]*Node)\n",
+    "\troot := Node{ID: 0, Children: nil}\n",
+    "\n",
+    "\tfor _, rec := range records {\n",
+    "\t\tid := rec.ID\n",
+    "\t\tparent := rec.Parent\n",
+    "\n",
+    "\t\tswitch {\n",
+    "\t\tcase id == 0: // root Node\n",
+    "\t\t\tif _, exist := mapIDNode[id]; !exist {\n",
+    "\t\t\t\tchildren := []*Node{}\n",
+    "\t\t\t\troot.Children = children\n",
+    "\t\t\t\tmapIDNode[id] = &root\n",
+    "\t\t\t}\n",
+    "\t\tcase id > 0 && id > parent:\n",
+    "\t\t\tif _, exist := mapIDNode[id]; exist {\n",
+    "\t\t\t\tfmt.Println(\"node exists: \", id, parent)\n",
+    "\t\t\t\tcontinue\n",
+    "\t\t\t}\n",
+    "\t\t\tchildren := []*Node{}\n",
+    "\t\t\tnode := Node{ID: id, Children: children}\n",
+    "\t\t\tmapIDNode[id] = &node\n",
+    "\t\t\tif pNode, exist := mapIDNode[parent]; exist {\n",
+    "\t\t\t\tpNode.Children = append(pNode.Children, &node)\n",
+    "\t\t\t} else {\n",
+    "\t\t\t\tchildren2 := []*Node{&node}\n",
+    "\t\t\t\tparentNode := Node{ID: parent, Children: children2}\n",
+    "\t\t\t\tmapIDNode[parent] = &parentNode\n",
+    "\t\t\t}\n",
+    "\t\tdefault:\n",
+    "\t\t\treturn nil, errors.New(\"Invalid record\")\n",
+    "\t\t}\n",
+    "\n",
+    "\t}\n",
+    "\n",
+    "\treturn mapIDNode[0], nil\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "&{0 []}\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "records := []Record{\n",
+    "\t\t\t{ID: 0},\n",
+    "\t\t}\n",
+    "\n",
+    "Build(records)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<nil>\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "records = []Record{}\n",
+    "\n",
+    "Build(records)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2\n",
+      "6\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "records = []Record{\n",
+    "\t\t\t{ID: 0},\n",
+    "\t\t\t{ID: 1, Parent: 0},\n",
+    "\t\t\t{ID: 2, Parent: 0},\n",
+    "\t\t}\n",
+    "\n",
+    "res, err := Build(records)\n",
+    "\n",
+    "fmt.Println(res.ID, res.Children[0].ID, res.Children[1].ID)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 2 1\n",
+      "6\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "records = []Record{\n",
+    "\t\t\t{ID: 2, Parent: 0},\n",
+    "\t\t\t{ID: 1, Parent: 0},\n",
+    "\t\t\t{ID: 0},\n",
+    "\t\t}\n",
+    "\n",
+    "res, err := Build(records)\n",
+    "\n",
+    "fmt.Println(res.ID, res.Children[0].ID, res.Children[1].ID)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
